close issue #3, #4, #9, #12 - contact form has header - contact form has button contrast - scrolls to bottom of page on tab opening - name centered correctly

--- a/css/main.css
+++ b/css/main.css
@@ -155,7 +155,7 @@
 }
 
 .j-link:active {
-    color: black;
+    text-shadow: 2px 2px 5px red;
 }
 
 
@@ -187,7 +187,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -80%);
+    transform: translate(-50%, -64%);
 }
 
 .moon2 {
